--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
---extra-index-url https://download.pytorch.org/whl/cu117
-torch==1.13.1
-torchvision==0.14.1
+--index-url https://download.pytorch.org/whl/cu118
+torch==2.4.0
+torchvision==0.19.0
+torchaudio==2.4.0 
 packaging
 sentencepiece
-peft==0.4.0
+peft==0.12.0 
 einops==0.4.1
 fastapi==0.100.1
 gradio==3.39.0
 markdown2==2.4.10
-numpy==1.24.2
+numpy==1.26.4 
 openai==0.27.8
 opencv_python==4.8.0.74
 Pillow==9.4.0
@@ -17,7 +18,10 @@ ray==2.6.1
 Requests==2.31.0
 shortuuid==1.0.11
 tqdm==4.64.1
-transformers==4.31.0
+transformers==4.44.2 
 uvicorn==0.23.2
 scipy==1.11.2
-bitsandbytes==0.41.1
+bitsandbytes==0.43.3 
+torchviz
+deepspeed
+tensorboard
